# esp32-omni-track

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  diagram.json  rust-toolchain.toml  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
partitions/: large_spiffs_8MB.csv  large_spiffs_v2_8MB.csv  max_app_8MB.csv  partitions_singleapp.csv
src/: index.html  lib.rs  main.rs
src/display/: display_module.rs  mod.rs
src/gps/: gps_module.rs  line_by_line_iterator.rs  mod.rs
src/positions_queue/: mod.rs  position.rs  positions_queue.rs
src/server_http/: http_module.rs  index.html  mod.rs
src/wifi/: mod.rs  wifi_module.rs
