[package]
name = "esp32-omni-track"
version = "0.1.0"
edition = "2024"
resolver = "2"

[[bin]]
name = "esp32-omni-track"
# harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
# https://github.com/johnthagen/min-sized-rust
opt-level = "z"      # Optimize for size. This enables all optimizations that do not increase code size.
strip = true         # Automatically strip symbols from the binary.
lto = true           # Enable Link Time Optimization (LTO) for better performance and smaller binary size.
codegen-units = 1    # LLVM can perform better optimizations using a single thread
panic = "abort"      # Abort on panic to reduce binary size (no unwinding code)

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
# Feature base: habilita toda a stack ESP-IDF
espidf = ["dep:esp-idf-svc", "dep:embassy-time"]

esp32c3 = ["espidf"]
esp32c6 = ["espidf"]
esp32s3 = ["espidf"]

# Esp32-C3 SuperMini (RISC-V, target: riscv32imc-esp-espidf)
esp32c3_super_mini = ["esp32c3"]
# Heltec Wireless Tracker (ESP32-S3FN8, Xtensa, target: xtensa-esp32s3-espidf)
heltec_wireless_tracker = ["esp32s3"]
# Esp32-C6-DevKitC-1 (RISC-V, target: riscv32imc-esp-espidf)
esp32c6_devkitc_1 = ["esp32c6"]

# genérico para desenvolvimento local (para rust-analyzer funcionar)
default = ["esp32c6_devkitc_1"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] , optional = true }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] , optional = true }
embedded-graphics = "0.8.2"
mipidsi = "0.10.0"
nmea = { version = "0.7.0", default-features = false, features = ["GNSS"] }
chrono = { version = "0.4.44", default-features = false }
postcard = "1.1.*"
serde = { version = "1.0.*", default-features = false }

[dev-dependencies]
test-log = { version = "*" }

[package.metadata.esp-idf-sys]
extra_components = [
    # https://github.com/esp-rs/esp-idf-svc/blob/master/examples/sd_spi_littlefs.rs
    { remote_component = { name = "joltwallet/littlefs", version = "1.14" } },
    # https://github.com/esp-rs/esp-idf-svc/blob/master/examples/mqtt_client.rs
    { remote_component = { name = "espressif/mqtt", version = "1.*" } }
]

[build-dependencies]
embuild = "0.33"

[workspace.lints.clippy]
large_stack_frames = "deny"
boxed_local = "warn"
large_types_passed_by_value = "warn"
